JQuery error This commit correct the error that JQuery was triggering when the extension load.

--- a/background.html
+++ b/background.html
@@ -1,3 +1,6 @@
+<html>
+<head></head>
+<body>
 <script type="text/javascript" src="lib/3rdparty/jquery.js"></script>
 <script type="text/javascript" src="lib/3rdparty/oauth.js"></script>
 <script type="text/javascript" src="lib/3rdparty/sha1.js"></script>
@@ -979,3 +982,5 @@ function initializeExtension() {
   });
 }
 </script>
+</body>
+</html>
