--- a/options.html
+++ b/options.html
@@ -264,6 +264,7 @@ function updatePredictedHitsCount() {
     <select name="name_attribute">
       <option value="screen_name">Screen name (nickname)</option>
       <option value="name">Real name</option>
+      <option value="both">Both names</option>
     </select><br>
     <label for="compose_position">Compose area position:</label>
     <select name="compose_position">
