Allowing adding more than one person to reply to. First part of #30

--- a/background.html
+++ b/background.html
@@ -383,6 +383,7 @@ function ComposerData() {
   this.urlShortener = '';
   this.isComposing = false;
   this.replyId = null;
+  this.replyUser = null;
 }
 
 function TweetManager() {
