Making background.html a valid html page

--- a/background.html
+++ b/background.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+<head>
 <script type="text/javascript" src="lib/3rdparty/jquery.js"></script>
 <script type="text/javascript" src="lib/3rdparty/oauth.js"></script>
 <script type="text/javascript" src="lib/3rdparty/sha1.js"></script>
@@ -983,3 +986,7 @@ function initializeExtension() {
   });
 }
 </script>
+</head>
+<body>
+</body>
+</html>
