--- a/popup.html
+++ b/popup.html
@@ -1016,11 +1016,6 @@ $(function() {
     }
   });
 });
-
-function writeMessage(msg)
-{
-  document.write(chrome.i18n.getMessage(msg));
-}
 </script>
 </head>
 <body>
@@ -1050,13 +1045,13 @@ function writeMessage(msg)
   </div>
   <div id="compose_tweet" onclick="Composer.showComposeArea()">
     <img class="left" src="img/arrow_down.gif"/>
-    <script>writeMessage("composeTweet");</script>
+    Compose Tweet
     <img class="right" src="img/arrow_down.gif"/>
   </div>
 
   <span class="header_link_left">
-    <a href="javascript:signout()"><script>writeMessage("logout");</script></a> |
-    <a href="#" onclick="openTab(chrome.extension.getURL('options.html'))"><script>writeMessage("options");</script></a>
+    <a href="javascript:signout()">Log out</a> |
+    <a href="#" onclick="openTab(chrome.extension.getURL('options.html'))">Options</a>
   </span>
   <a class="header_link_right" href="javascript:Renderer.markAllAsRead();">Mark all as read</a>
   <img src="img/loading.gif" id="loading" style="display: none;"/>
