--- a/options.html
+++ b/options.html
@@ -264,7 +264,6 @@ function updatePredictedHitsCount() {
     <select name="name_attribute">
       <option value="screen_name">Screen name (nickname)</option>
       <option value="name">Real name</option>
-      <option value="both">Both names</option>
     </select><br>
     <label for="compose_position">Compose area position:</label>
     <select name="compose_position">
@@ -275,6 +274,7 @@ function updatePredictedHitsCount() {
     <select name="theme">
       <option value="css/chromified.css,css/chromified-theme/jquery-ui-1.7.2.custom.css">Chromified</option>
       <option value="css/whisper.css,css/whisper-theme/jquery-ui-1.7.2.custom.css">Whispers</option>
+      <option value="css/darkness-theme/jquery-ui-1.7.2.custom.css,css/darkness.css">Darkness</option>
     </select><br>
     <label for="hover_timeout">Hover to read time (ms):</label>
     <input type="text" name="hover_timeout" validator="required,number,positive"><br>
