Added support to reply to all mentioned in tweet when clicking on reply icon.

--- a/background.html
+++ b/background.html
@@ -46,6 +46,8 @@ OptionsBackend = {
     dms_visible: true,
     favorites_visible: true,
     lists_visible: true,
+    
+    reply_all: true,
 
     lists_count: 1,
 
