--- a/options.html
+++ b/options.html
@@ -279,6 +279,10 @@ function updatePredictedHitsCount() {
     </select><br>
     <label for="hover_timeout">Hover to read time (ms):</label>
     <input type="text" name="hover_timeout" validator="required,number,positive"><br>
+    <label for="reply_all">Reply to all mentioned:</label>
+    <input type="checkbox" id="reply_all" name="reply_all" />
+    <br />
+    
     <label>*Icon color:</label>
     <canvas name="idle_color" width="19" height="19" class="color_selector"></canvas>
   </fieldset>
