--- a/popup.html
+++ b/popup.html
@@ -38,6 +38,7 @@ if(shortener_acct) {
   shortener_login = OptionsBackend.get('shortener_login');
   shortener_key = OptionsBackend.get('shortener_key');
 }
+var reply_all = OptionsBackend.get('reply_all');
 var shortener = new Shortener(OptionsBackend.get('url_shortener'),
   shortener_acct, shortener_login, shortener_key);
 
@@ -227,13 +228,14 @@ var Composer = {
     }, this.favoriteId);
   },
 
-  addUser: function (user) {
+  addUser: function (user, replies) {
     var textArea = $("#compose_tweet_area textarea");
     var currentVal = textArea.val();
+    var replies =  replies || [];
     if(currentVal.length > 0 && currentVal[currentVal.length - 1] != ' ') {
       currentVal += ' ';
     }
-    currentVal += '@' + user + ' ';
+    currentVal += '@' + user + ' ' + replies.join('');
     textArea.val(currentVal);
   },
 
@@ -243,15 +245,24 @@ var Composer = {
     var textArea = $("#compose_tweet_area textarea");
     var currentVal = textArea.val();
     var user = $(".user", node).attr('screen_name');
+    var replies = [];    
+    if (reply_all) {
+      $(".text a", node).each(function(){
+        var t = $(this).text();
+        if (/^[A-Z0-9_-]{1,15}$/ig.test(t)) {
+          replies.push('@'+t+' ');
+        }
+      });
+    }
 
     if(Composer.replyId && currentVal.indexOf(Composer.replyUser) != -1) {
-      this.addUser(user);
+      this.addUser(user, replies);
       return;
     } else {
       if(tweetManager.currentTimeline == "dms") {
         textArea.val("d " + user + " ");
       } else {
-        this.addUser(user);
+        this.addUser(user, replies);
       }
       tweetManager.composerData.replyId = Composer.replyId = $(node).attr('tweetid');
       tweetManager.composerData.replyUser = Composer.replyUser = user;
