--- a/background.html
+++ b/background.html
@@ -46,8 +46,8 @@ OptionsBackend = {
     dms_visible: true,
     favorites_visible: true,
     lists_visible: true,
-    
-    reply_all: true,
+
+    reply_all: false,
 
     lists_count: 1,
 
