--- a/background.html
+++ b/background.html
@@ -104,6 +104,7 @@ function TweetsTimeline(timelineId, manager, recheckTime) {
   this.usingPages = false;
   this.timelineId = timelineId;
   this.listId = null;
+  this.timelineStopped = false;
 
   switch(timelineId) {
     case 'home':
@@ -132,6 +133,7 @@ TweetsTimeline.prototype = {
   },
 
   stopTimer: function() {
+    this.timelineStopped = true;
     if(this.timerId) {
       clearTimeout(this.timerId);
       this.timerId = null;
@@ -139,6 +141,9 @@ TweetsTimeline.prototype = {
   },
 
   onFetchNew: function(success, tweets, status, context) {
+    if(this.timelineStopped) {
+      return;
+    }
     var _this = this;
     if(!success) {
       this.setError(status);
@@ -208,6 +213,9 @@ TweetsTimeline.prototype = {
   },
 
   onFetch: function(success, tweets, status, context) {
+    if(this.timelineStopped) {
+      return;
+    }
     if(!success) {
       this.setError(status);
       this.currentCallback(null);
