--- a/background.html
+++ b/background.html
@@ -48,6 +48,13 @@ OptionsBackend = {
     favorites_visible: true,
     lists_visible: true,
 
+    unified_visible: false,
+    home_include_unified: true,
+    mentions_include_unified: true,
+    dms_include_unified: true,
+    favorites_include_unified: false,
+    lists_include_unified: false,
+
     reply_all: false,
 
     lists_count: 1,
@@ -86,6 +93,147 @@ OptionsBackend = {
     return this.cachedOptions[option];
   }
 };
+
+Utils = {
+  pushTweet: function(list, tweet) {
+    var baseTime = Date.parse(tweet.created_at);
+    var i = 0;
+    for(; i < list.length; ++i) {
+      var tweetTime = Date.parse(list[i].created_at);
+      if(baseTime >= tweetTime) {
+        break;
+      }
+    }
+    if(i == list.length || list[i].id != tweet.id)
+      list.splice(i, 0, tweet);
+  }
+};
+
+function UnifiedTweetsTimeline(manager, timelines) {
+  this.timelines = timelines;
+  this.timelineId = 'unified';
+}
+UnifiedTweetsTimeline.prototype = {
+
+  killTimeline: function() {
+    /*noop*/
+  },
+
+  stopTimer: function() {
+    /*noop*/
+  },
+
+  eachTimeline: function(callback) {
+    for(var tId in this.timelines) {
+      var timeline = this.timelines[tId];
+      if(timeline.includeInUnified) {
+        callback.call(this, timeline);
+      }
+    }
+  },
+
+  countTimelines: function() {
+    var count = 0;
+    this.eachTimeline(function(timeline) {
+      if(timeline.includeInUnified) {
+        ++count;
+      }
+    });
+    return count;
+  },
+
+  giveMeTweets: function(callback, syncNew, cacheOnly) {
+    // We shouldn't receive syncNew requests so they'll be ignored.
+
+    if(this.currentCallback) {
+      //Handling multiple calls to giveMeTweets, just update the registered
+      //callback and let the first request finish.
+      this.currentCallback = callback;
+      return;
+    }
+    this.currentCallback = callback;
+    var joinCount = this.countTimelines();
+    var tweetsCache = [];
+    var _this = this;
+    var giveMeCallback = function(tweets, timelineId) {
+      --joinCount;
+      if(tweets != null) {
+        for(var i = 0, len = tweets.length; i < len; ++i) {
+          var tweet = tweets[i];
+          tweet.timelineId = timelineId;
+          Utils.pushTweet(tweetsCache, tweet);
+        }
+      }
+      if(joinCount > 0) {
+        return;
+      }
+      try {
+        _this.currentCallback(tweetsCache, _this.timelineId);
+      } catch(e) {
+        /* ignoring, popup dead? */
+      }
+      _this.currentCallback = null;
+    };
+    this.eachTimeline(function(timeline) {
+      timeline.giveMeTweets(giveMeCallback, false, cacheOnly);
+    });
+  },
+
+  updateNewTweets: function() {
+    this.eachTimeline(function(timeline) {
+      timeline.updateNewTweets();
+    });
+  },
+
+  newTweetsCount: function() {
+    var ret = [0, 0];
+    this.eachTimeline(function(timeline) {
+      var timelineCount = timeline.newTweetsCount();
+      ret[0] += timelineCount[0];
+      ret[1] += timelineCount[1];
+    });
+    return ret;
+  },
+
+  getNewUnreadTweets: function() {
+    return [];
+  },
+
+  getNewUnreadIds: function() {
+    return [];
+  },
+
+  removeFromCache: function(id) {
+    this.eachTimeline(function(timeline) {
+      timeline.removeFromCache(id);
+    });
+  },
+
+  findTweet: function(id) {
+    return null;
+  },
+
+  pushTweet: function(tweet) {
+    return;
+  },
+
+  getNewTweetsCache: function() {
+    return [];
+  },
+
+  getTweetsCache: function() {
+    var tweetsCache = [];
+    this.eachTimeline(function(timeline) {
+      var timelineTweets = timeline.getTweetsCache();
+      for(var i = 0, timelineLen = timelineTweets.length; i < timelineLen; ++i) {
+        var tweet = timelineTweets[i];
+        tweet.timelineId = timeline.timelineId;
+        Utils.pushTweet(tweetsCache, tweet);
+      }
+    });
+    return tweetsCache;
+  }
+}
 
 function TweetsTimeline(timelineId, manager, recheckTime) {
   this.timelineId = timelineId;
@@ -388,16 +536,15 @@ TweetsTimeline.prototype = {
   },
 
   pushTweet: function(tweet) {
-    var baseTime = Date.parse(tweet.created_at);
-    var i = 0;
-    for(; i < this.tweetsCache.length; ++i) {
-      var tweetTime = Date.parse(this.tweetsCache[i].created_at);
-      if(baseTime >= tweetTime) {
-        break;
-      }
-    }
-    if(i == this.tweetsCache.length || this.tweetsCache[i].id != tweet.id)
-      this.tweetsCache.splice(i, 0, tweet);
+    Utils.pushTweet(this.tweetsCache, tweet);
+  },
+
+  getNewTweetsCache: function() {
+    return this.newTweetsCache;
+  },
+
+  getTweetsCache: function() {
+    return this.tweetsCache;
   }
 }
 
@@ -424,23 +571,42 @@ function TweetManager() {
   this.listsCache = null;
   this.listsTabCount = OptionsBackend.get('lists_count');
 
+  this.listIncludeInUnified = false;
+  var unifiedVisible = OptionsBackend.get('unified_visible');
+  var createUnifiedTab = false;
   var timelineNames = ["home", "mentions", "dms", "favorites", "lists"];
   for(var i = 0; i < timelineNames.length; ++i) {
     var refreshInterval = OptionsBackend.get(timelineNames[i] + '_refresh_interval');
     var visible = OptionsBackend.get(timelineNames[i] + '_visible');
-    if(!visible) {
+    var includeInUnified = false;
+    if(unifiedVisible) {
+      includeInUnified = OptionsBackend.get(timelineNames[i] + '_include_unified');
+    }
+    if(!visible && !includeInUnified) {
       continue;
     }
+    if(includeInUnified) {
+      createUnifiedTab = true;
+    }
     if(timelineNames[i] == "lists") {
+      this.listIncludeInUnified = includeInUnified;
       for(var j = 0; j < this.listsTabCount; ++j) {
-        this.timelines["lists_" + j] = new TweetsTimeline("lists_" + j, this, refreshInterval);
+        var listTimeline = new TweetsTimeline("lists_" + j, this, refreshInterval);
+        listTimeline.includeInUnified = includeInUnified;
+        this.timelines["lists_" + j] = listTimeline;
       }
     } else {
-      this.timelines[timelineNames[i]] = new TweetsTimeline(timelineNames[i], this, refreshInterval);
+      var timeline = new TweetsTimeline(timelineNames[i], this, refreshInterval);
+      timeline.includeInUnified = includeInUnified;
+      this.timelines[timelineNames[i]] = timeline;
     }
     if(!this.currentTimeline) {
       this.currentTimeline = (timelineNames[i] == "lists") ? "lists_0" : timelineNames[i];
     }
+  }
+
+  if(createUnifiedTab) {
+    this.timelines['unified'] = new UnifiedTweetsTimeline(this, this.timelines);
   }
 
   this.lastAvailableHits = null;
@@ -811,6 +977,7 @@ TweetManager.prototype = {
       delete this.timelines[timelineName];
       timeline = this.timelines[timelineName] = new TweetsTimeline(timelineName, this, OptionsBackend.get('lists_refresh_interval'));
     }
+    timeline.includeInUnified = this.listIncludeInUnified;
     timeline.listId = listId;
     timeline.setTimelinePath(this.twitterBackend.username() + '/lists/' + listId + '/statuses');
     return timeline;
@@ -852,8 +1019,9 @@ TweetManager.prototype = {
 
   updateNewTweets: function() {
     if(this.currentTimeline == 'favorites') {
-      for(var i = 0, len = this.timelines[this.currentTimeline].newTweetsCache.length; i < len; ++i) {
-        var id = this.timelines[this.currentTimeline].newTweetsCache[i].id;
+      var newTweets = this.timelines[this.currentTimeline].getNewTweetsCache();
+      for(var i = 0, len = newTweets.length; i < len; ++i) {
+        var id = newTweets[i].id;
         this.eachTimeline(function(timeline) {
           var tweet = timeline.findTweet(id);
           if(tweet)
@@ -888,7 +1056,7 @@ TweetManager.prototype = {
   },
 
   markTimelineAsRead: function() {
-    var tweetsToRead = this.getCurrentTimeline().tweetsCache;
+    var tweetsToRead = this.getCurrentTimeline().getTweetsCache();
     for(var i = 0; i < tweetsToRead.length; ++i) {
       this.readTweet(tweetsToRead[i].id);
     }
